plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.95'
}

version = minecraft_version + '-' + mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

// Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers.add('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    // Put repositories for dependencies here
    // ForgeGradle automatically adds the Forge maven and Maven Central for you

    // JEI repositories
    maven {
        // location of the maven that hosts JEI files
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
    // Curseforge repository
    maven {
        url = "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    // curios repository
    maven {
        url = "https://maven.theillusivec4.top/"
    }
    maven {
        name = "CurseForge"
        url = "https://minecraft.curseforge.com/api/maven/"
    }
}

dependencies {
    // External libraries.
    implementation fileTree(dir: "libs", include: ["*.jar"])

    // These are REQUIRED for the mod to compile correctly and should not be removed.
    implementation "top.theillusivec4.curios:curios-neoforge:${curios_version}"
    implementation "curse.maven:eclipticseasons-1118306:6868607"

    // compile against the JEI API but do not include it at runtime
//    compileOnly "mezz.jei:jei-1.21-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-1.21-neoforge-api:${jei_version}"
    compileOnly "curse.maven:serene-seasons-291874:6182596"
    compileOnly "curse.maven:glitchcore-955399:5660740"
//    compileOnly "curse.maven:terrafirmacraft-302973:6187491" // no 1.21.1
//    compileOnly "curse.maven:origins-474438:5314209"
    compileOnly "curse.maven:mutantmonsters-852665:5742611"
    compileOnly "curse.maven:vampirism-233029:6544569"
    compileOnly "curse.maven:supplementaries-412082:6854370"
//    compileOnly "curse.maven:beachparty-858691:6458692" // no 1.21.1
//    compileOnly "curse.maven:meadow-821483:6467344" // no 1.21.1
    compileOnly "curse.maven:architectury-419699:5786327"
    compileOnly "curse.maven:artifacts-312353:6598611"
    compileOnly "curse.maven:overflowingbars-852662:5770623"
    compileOnly "curse.maven:puzzlelib-495476:6850909"

    //implementation(fg.deobf("curse.maven:weather2-237746:5244118"))
    //implementation(fg.deobf("curse.maven:coroutil-237749:5096038"))
    //implementation(fg.deobf("curse.maven:werewolves-417851:5406832"))

    // at runtime, use the full JEI jar for Forge
//    runtimeOnly "mezz.jei:jei-${minecraft_version}-forge:${jei_version}"
//    runtimeOnly "curse.maven:appleskin-248787:4770828"
//    runtimeOnly "curse.maven:spark-361579:4738952"

    //runtimeOnly(fg.deobf("curse.maven:letsdoapi-864599:5468182"))
    //runtimeOnly(fg.deobf("curse.maven:vinery-704465:6264246"))
    //runtimeOnly(fg.deobf("curse.maven:herbalbrew-951221:6458889"))
    //runtimeOnly(fg.deobf("curse.maven:farmandcharm-1038103:6195373"))
    //runtimeOnly(fg.deobf("curse.maven:nethervinery-930072:6164515"))
    //runtimeOnly(fg.deobf("curse.maven:furniture-1062363:5988125"))
    //runtimeOnly(fg.deobf("curse.maven:bakery-1038130:6195381"))
    //runtimeOnly(fg.deobf("curse.maven:brewery-1038106:6195389"))
    //runtimeOnly(fg.deobf("curse.maven:wildernature-1071657:6164482"))
    //runtimeOnly(fg.deobf("curse.maven:candlelight-1038117:6195385"))
    //runtimeOnly(fg.deobf("curse.maven:camping-1072398:5823939"))
    //runtimeOnly(fg.deobf("curse.maven:applewood-1037047:6164430"))
    //runtimeOnly(fg.deobf("curse.maven:cornexpansion-1038740:6216092"))
    //runtimeOnly fg.deobf("curse.maven:fruitsdelight-943774:6500940")
    //runtimeOnly fg.deobf("curse.maven:farmersdelight-398521:6154802")
    //runtimeOnly fg.deobf("curse.maven:farmersrespite-551453:5543547")

    //runtimeOnly(fg.deobf("curse.maven:moonlight-499980:6428221"))
    //runtimeOnly(fg.deobf("curse.maven:expandability-465066:5301414"))
    //runtimeOnly(fg.deobf("curse.maven:clothconfig-348521:5729105"))

    //implementation fg.deobf("curse.maven:quark-243121:5594847")
    //implementation(fg.deobf("curse.maven:quark_oddities-301051:5070502"))
    //implementation fg.deobf("curse.maven:zeta-968868:5597406") //  don't work on server

    //runtimeOnly(fg.deobf("curse.maven:iceandfire-264231:5633453"))
    //runtimeOnly(fg.deobf("curse.maven:citadel-331936:6702068"))

    //runtimeOnly(fg.deobf("curse.maven:ftblibrary-404465:5925398"))
    //runtimeOnly(fg.deobf("curse.maven:ftbteams-404468:5267190"))
    
    //runtimeOnly fg.deobf("curse.maven:create-328085:6323270")
    //runtimeOnly(fg.deobf("curse.maven:patchouli-306770:4966125"))
    //runtimeOnly fg.deobf("curse.maven:firma-civilization-714158:5737719")
    //runtimeOnly fg.deobf("curse.maven:alekis-nifty-ships-1068445:5669604")
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
// When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version: forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: version,
            mod_authors: mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing:
// tasks.named('publish').configure {
//     dependsOn 'reobfJar'
// }

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}


tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}
